// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm cLqvxn"
  >
    text
    <span
      class="sc-AxirZ glGzyM"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm cLqvxn"
  >
    text
    <span
      class="sc-AxirZ bqPsui"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
